dhall/tests/type-inference/failure/unit/RecursiveRecordTypeMergeLhsNotRecordType.txt
Type error: error: RecordTypeMergeRequiresRecordType
 --> <current file>:1:1
  |
1 | Bool ⩓ {}
  | ^^^^^^^^^ RecordTypeMergeRequiresRecordType
  |
